better layout for IO section

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -20,6 +20,10 @@
     color: #fff;
 }
 
+.placeholder {
+    min-height: 1em;
+}
+
 /* .hide-show { */
 /*     display: inline-block; */
 /*     margin-left: auto; */
