--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,7 +1,8 @@
 #app {
     margin-left: auto;
     margin-right: auto;
-    max-width: 1024px;
+    max-width: 1044px;
+    padding: 0 10px;
 }
 
 /* General visual stuff */
@@ -49,6 +50,34 @@
 
 .annotations .validation-error {
     color: #d62728;
+}
+
+select.instance-select {
+    border-radius: 0;
+    border: none;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+.automatic {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.automatic .pure-button-group {
+    /* min-width: 100px; */
+}
+
+.automatic label {
+    padding: 0 .5em;
+    /* min-width: 100px; */
+}
+
+.automatic input {
+    margin-right: .5em;
+    flex-grow: 1;
 }
 
 /* verovio component: note selection and highlight styling */
