add functionality for loading existing annotations

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -38,6 +38,16 @@
     min-height: 1em;
 }
 
+.form-text {
+    padding: 0.5em 0;
+}
+
+@media screen and (min-width: 48em) {
+    .gh-input .load-padder {
+        margin-top: 28px;
+    }
+}
+
 /* .hide-show { */
 /*     display: inline-block; */
 /*     margin-left: auto; */
@@ -47,12 +57,6 @@
 /* } */
 
 /* annotation component */
-
-@media screen and (min-width: 48em) {
-    .gh-input .load-padder {
-        margin-top: 28px;
-    }
-}
 
 .annotations .instance-list {
     list-style-type: none;
